@@ -37,19 +37,19 @@
         &quot;Euskalbar.</li>
       </ul>
       <h2>Options</h2>
-            This section allows to change the following options:
+            This section contains the following items:
       <ul>
         <li><h3>Toggle dictionaries menu</h3>Toggles dictionaries menu. This 
         menu is located between &quot;Tolls" and "Help" menus in the main Firefox 
         toolbar.</li>
-        <li><h3>Preferences</h3>
+        <li><h3>Preferences...</h3>
 		  <ul>
 			<li><h3>Default language</h3>Sets the language used in the language 
             selection button when Euskalbar starts: eu >> es, es >> eu, eu >> en edo en >> eu.</li>
 			<li><h3>Tab preferences</h3>Preferences for tab behaviour: reuse 
             tabas and open new tabs in background.</li>
 			<li><h3>Dictionaries looked up pressing Enter key</h3></li>
-			<li><h3>Shift and Ctrl query timeout (s)</h3>Changes the timeout for Shift+Enter 
+			<li><h3>Combined query timeout (s)</h3>Changes the timeout for Shift+Enter 
             and Ctrl+Enter searches.<p>When this searches are used, Euskalbar 
             waits for 5 seconds to have a response. If there is no response, the 
             connection is closed.<p>This timeout use to be enough, but sometimes 
@@ -61,8 +61,9 @@
 			<li><h3>Skins</h3>Allows to change the skin for Euskalbar interfaces.</li>
 		  </ul>
 		</li>
+        <li><h3>Statistics</h3>Shows a count of searches made with each of the bar dictionaries.</li>
       </ul>
-      <h2>Hiztegien menua</h2>
+      <h2>Dictionaries menu</h2>
 
             <p>This options gives the chance to access directly to several Basque dictionaries and resources' web sites.<br>
             The resources are the following:<br />
