@@ -40,7 +40,7 @@
         <li><h3>Mostrar/esconder el menú de diccionarios</h3>Muestra o esconde 
         el menú de diccionarios, situado entre las opciones &quot;Herramientas&quot; y 
         &quot;Ayuda&quot; del menú principal de Firefox.</li>
-        <li><h3>Preferencias</h3>
+        <li><h3>Preferencias...</h3>
 		  <ul>
 			<li><h3>Idioma</h3>Establece el idioma predeterminado del botón de 
             selección de idioma: eu >> es, es >> eu, eu >> en edo en >> eu.</li>
@@ -48,7 +48,7 @@
             de las pestañas: permite reutilizar las pestañas, y abrir las nuevas 
             pestañas en el fondo.</li>
 			<li><h3>Seleccione los diccionarios a consultar con la tecla Intro</h3></li>
-			<li><h3>Tiempo límite de las consultas Shift y Ctrl (seg)</h3>
+			<li><h3>Tiempo límite de las consultas combinadas (seg)</h3>
             Modifica el tiempo límite de consulta al usar Shift+Intro o 
             Ctrl+Intro.<p>Al usar este tipo de consulta, Euskalbar espera 
             respuesta durante 5 segundos. Si transcurrido este tiempo no recibe 
@@ -63,6 +63,7 @@
 			<li><h3>Skins</h3>Permite cambiar el aspecto de las interfaces de Euskalbar.</li>
           </ul>
 		</li>
+        <li><h3>Estadísticas</h3>Muestra un recuento de las búsquedas realizadas con cada uno de los diccionarios de la barra.</li>
       </ul>
       <h2>Menú de diccionarios</h2>
       Esta opci&oacute;n&nbsp;permite acceder directamente al sitio web de diversos diccionarios y recursos del euskara.<br>
