@@ -32,12 +32,12 @@ Atal honetan ondoko aukera hauek alda daitezke:
       <ul>
         <li><h3>Erakutsi/ezkutatu hiztegien menua</h3>Hiztegien menua erakusten/ezkutatzen du  "Tresnak" eta "Laguntza" menuen artean, Firefoxen menu barra
 nagusian.</li>
-        <li><h3>Hobespenak</h3>
+        <li><h3>Hobespenak...</h3>
 		  <ul>
 			<li><h3>Hizkuntza</h3>Euskalbar abiaraztean hizkuntza hautatzeko botoian erabiliko den hizkuntza: eu >> es, es >> eu, eu >> en edo en >> eu.</li>
 			<li><h3>Fitxen hobespenak</h3>Fitxen portaera ezartzen dituzten aukerak: fitxak berrerabiltzeko aukera, eta fitxak atzeko planoan irekitzeko aukera.</li>
 			<li><h3>Enter tekla sakatzean kontsultatuko diren hiztegiak</h3></li>
-			<li><h3>Shift eta Ktrl kontsulten denbora-muga (seg)</h3>Shift+Enter 
+			<li><h3>Kontsulta konbinatuen denbora-muga (seg)</h3>Shift+Enter 
             edo Ktrl+Enter kontsultetarako lehenetsita dagoen denbora-muga 
             aldatzen du.<p>Kontsulta mota hauek erabiltzean, Euskalbarren 
             portaera lehenetsia 5 segunduz erantzunaren zain geratzea da. Denbora honetan erantzunik jasotzen ez badu, konexioa ixten du.<br>
@@ -51,6 +51,7 @@ nagusian.</li>
 			<li><h3>Azalak</h3>Euskalbarren interfazeen azalak aldatzea ahalbidetzen du.</li>
 		  </ul>
 		</li>
+        <li><h3>Estatistikak</h3>Barrako hiztegi bakoitzarekin egin den bilaketa kopurua erakusten du.</li>
       </ul>
       <h2>Hiztegien menua</h2>
 Aukera honek euskarazko hainbat hiztegi eta baliabideren webguneetara zuzenean sartzeko aukera
