@@ -4,6 +4,8 @@
 
 2.2 bertsioa
 ================
+- Azalak sortu dira. (#14)
+- Estatistika lokalak sortu dira. (#4)
 - 3000ren azpisarrerak kontsultatzean zegoen arazoa konpondu da. (#18)
 - Elhuyarren azpisarrerak kontsultatzean azentu markekin zegoen arazoa konpondu da. (#13)
 - Open-Tran hiztegiak fitxak berrerabiltzeko zuen arazoa konpodu da. (#12)
@@ -14,7 +16,6 @@
 - Aldaketak hiztegien menuan:
   + Poloniera - Euskara hiztegia gehitu da.
   + Japoniera - Euskara hiztegia gehitu da.
-- Azalak sortu dira. (#4)
 
 
 2.1 bertsioa
